# fsb-library

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-release.yml  build-test.yml  clang-tidy-fix.yml  cmake-single-platform.yml  codeql.yml  deploy-docs.yml  docker-build.yml  sonar-build.yml
cmake/: CheckFlags.cmake  GenerateDocumentation.cmake
cmake/doxygen/: Doxyfile.in
docs/: README.md
docs/assets/: DoxygenLayout.xml  bibliography.bib  customdoxygen.css  footer.html  header.html
docs/topics/: CodingStandard.md  DevelopersGuide.md  ExampleProjects.md  GettingStarted.md
docs/tutorials/: TutorialForwardKinematics.md  Tutorials.md
docs/tutorials/TutorialForwardKinematics/: CMakeLists.txt
docs/tutorials/TutorialForwardKinematics/data/: ur5.urdf
docs/tutorials/TutorialForwardKinematics/src/: fsb_tutorial_fk.cpp
examples/: CMakeLists.txt  README.md
examples/body_tree_panda/: CMakeLists.txt  README.md  body_tree_panda.cpp
examples/forward_kinematics_ur5/: CMakeLists.txt  README.md  forward_kinematics_ur5.cpp
examples/forward_kinematics_ur5/data/: joint_data.csv
fsb-core/: CMakeLists.txt
fsb-core/cmake/: ConfigureMaxSizes.cmake  fsb_configuration.h.in
fsb-core/include/: fsb_body.h  fsb_body_tree.h  fsb_circular_buffer.h  fsb_compute_kinematics.h  fsb_configuration.h  fsb_cubic.h  fsb_dynamics.h  fsb_encoder.h  fsb_inverse_kinematics.h  fsb_jacobian.h  fsb_joint.h  fsb_kinematic_redundancy.h  fsb_kinematics.h  fsb_linalg.h  fsb_linalg3.h  fsb_motion.h  fsb_path.h  fsb_pid.h  fsb_quaternion.h  fsb_quintic.h  fsb_rotation.h  fsb_spatial.h  fsb_spline.h  fsb_timescale.h  fsb_trajectory_path.h  fsb_trajectory_segment.h  fsb_trajectory_types.h  fsb_trapezoidal_velocity.h  fsb_types.h  fsb_work.h
fsb-core/src/: fsb_body.cpp  fsb_body_tree.cpp  fsb_dynamics.cpp  fsb_encoder.cpp  fsb_geometry.cpp  fsb_inverse_kinematics.cpp  fsb_jacobian.cpp  fsb_joint.cpp  fsb_kinematic_redundancy.cpp  fsb_kinematics.cpp  fsb_linalg.c  fsb_linalg.cpp  fsb_linalg3.cpp  fsb_motion.cpp  fsb_pid.cpp  fsb_quaternion.cpp  fsb_quintic.cpp  fsb_rotation.cpp  fsb_spatial.cpp  fsb_timescale.cpp  fsb_trajectory_path.cpp  fsb_trajectory_segment.cpp  fsb_trapezoidal_velocity.cpp
fsb-core/test/: CMakeLists.txt  fsb_body_test.cpp  fsb_body_tree_sample.cpp  fsb_body_tree_sample.h  fsb_body_tree_test.cpp  fsb_circular_buffer_test.cpp  fsb_dynamics_test.cpp  fsb_interface_test.cpp  fsb_inverse_kinematics_test.cpp  fsb_jacobian_test.cpp  fsb_joint_test.cpp  fsb_kinematic_redundancy_test.cpp  fsb_kinematics_test.cpp  fsb_linalg3_test.cpp  fsb_linalg_test.cpp  fsb_motion_test.cpp  fsb_pid_test.cpp  fsb_quaternion_test.cpp  fsb_quintic_test.cpp  fsb_rotation_test.cpp  fsb_spatial_test.cpp  fsb_spline_test.cpp  fsb_test_macros.h  fsb_timescale_test.cpp  fsb_trajectory_segment_test.cpp  fsb_trapezoidal_test.cpp  fsb_types_test.cpp  fsb_work_test.cpp
fsb-posix/: CMakeLists.txt
fsb-posix/include/: fsb_queue.h  fsb_thread.h  fsb_timing.h
fsb-posix/src/: fsb_thread.cpp  fsb_thread_affinity.cpp  fsb_thread_affinity_mach.cpp  fsb_timing.cpp
fsb-posix/test/: CMakeLists.txt  fsb_queue_test.cpp  fsb_timing_test.cpp
fsb-urdf/: CMakeLists.txt
fsb-urdf/include/: fsb_urdf.h  fsb_urdf_body.h  fsb_urdf_error.h  fsb_urdf_inertial.h  fsb_urdf_joint.h  fsb_urdf_name_map.h  fsb_urdf_origin.h  fsb_urdf_utilities.h
fsb-urdf/src/: fsb_urdf.cpp  fsb_urdf_body.cpp  fsb_urdf_inertial.cpp  fsb_urdf_joint.cpp  fsb_urdf_origin.cpp  fsb_urdf_utilities.cpp
fsb-urdf/test/: .clang-tidy  CMakeLists.txt  fsb_test_macros.h  fsb_urdf_body_test.cpp  fsb_urdf_inertial_test.cpp  fsb_urdf_joint_test.cpp  fsb_urdf_origin_test.cpp  fsb_urdf_test.cpp  fsb_urdf_utilities_test.cpp
fsb-urdf/test/data/franka_panda/: panda.urdf
fsb-urdf/test/data/lbr_iiwa7/: lbr_iiwa7_r800.urdf
fsb-urdf/test/data/ur5/: ur5.urdf
scripts/: build-dev.sh  build.sh  clang-tidy-fix.sh  install-dependencies.sh  install-plantuml.sh  install-ubuntu-dev-tools.sh  llvm-update-alternatives.sh
